--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -4,48 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To do list</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<nav>
-    <ul>
-        <li>
-            <a href="#">HOME</a>
-        </li>
-        <li>
-            <a href="#">TODO</a>
-        </li>
-        <li>
-            <a href="#">BLOG<a>
-        </li>
-        <li>
-            <a href="#">ABOUT</a>
-        </li>
-        <li>
-            <a href="#">CONTACT</a>
-        </li>
-    </ul>
-</nav>
-<nav id="vertical-nav">
-    <ul>
-        <li>
-        <a href="#">To Do List</a>
-        </li>
-        <li>
-            <a href="#">task 4</a>
-        </li>
-        <li>
-            <a href="#">task 3<a>
-        </li>
-        <li>
-            <a href="#">task 2</a>
-        </li>
-        <li>
-            <a href="#">task 1</a>
-        </li>
-    </ul>
-</nav>
-<div></div>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">HOME</a>
+                </li>
+                <li>
+                    <a href="#">TODO</a>
+                </li>
+                <li>
+                    <a href="#">BLOG<a>
+                </li>
+                <li>
+                    <a href="#">ABOUT</a>
+                </li>
+                <li>
+                    <a href="#">CONTACT</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <section>
+        <nav id="vertical-nav">
+            <div class="container">
+                <img id="graph" src="graph.webp">
+                <h1>To-Do List</h1>
+                <ul>
+                    <div class="add-task">
+                        <input type="text" id="taskInput" placeholder="Enter task...">
+                        <button onclick="addTask()">Add</button>
+                </ul>
+                <li>In Progress 3 </li>
+                <li> Completed 1 </li>
+            </div>
+            <div id="task-4">
+                <img id="check" src="check.svg">
+                <img id="bin" src="bin.webp">
+                Task 4
+            </div>
+            <div id="task-3">
+                <img id="bin" src="bin.webp">
+                Task 3
+            </div>
+            <div id="task-2">
+                <img id="bin" src="bin.webp">
+                Task 2
+            </div>
+            <div id="task-1">
+                <img id="bin" src="bin.webp">
+                Task 1
+            </div>
+        </nav>
+    </section>
 </body>
+
 </html>
