--- a/lesson08/index.html
+++ b/lesson08/index.html
@@ -12,45 +12,41 @@
     <header>
         Tesla
     </header>
-
     <h5> Teslsa vehield company </h5>
     <p> Tesla, Inc. is an American multinational automotive and clean
         energy company headquartered in Austin, Texas, which designs and manufactures electric vehicles (cars
         and trucks), stationary battery energy storage devices from home to grid-scale, solar panels and solar
         shingles, and related products and services. </p>
     <section>
-        <div id="model-s">
-            <img id="tm-s" src="model-S.jpg">
+        <div class="model-s">
+            <img src="model-S.jpg">
             <h4> Model S</h4>
             <p>The <span> Model S</span> was developed by a team led by Franz von Holzhausen, who previously worked
                 for Mazda North American Operations. Holzhausen drew upon the design of the CLS series of
                 cars. Codenamed "WhiteStar" prior to its official unveiling, the Model S was designed with an
-                electric powertrain in mind, unlike other electric vehicles where the manufacturer swaps out an
-                internal combustion engine with an electric motor. </p>
+                electric powertrain in mind, unlike other electric vehicles. </p>
         </div>
 
-        <div id="model-3">
-            <img id="tm-three" src="model-3.jpg">
+        <div class="model-3">
+            <img src="model-3.jpg">
             <h4>Model 3</h4>
             <p>The Tesla <span> Model 3</span> is a battery electric compact executive car with a fastback body
                 style built by <span>Tesla</span>, Inc. since 2017. The Model 3 was marketed as being more affordable to
-                more people than previous models by <span>Tesla</span>. The Model 3 was the world's top selling plug-in electric car
-                for three
-                years. </p>
+                more people than previous models by <span>Tesla</span>. The Model 3 was the world's top selling plug-in
+                electric car for three years. </p>
         </div>
 
-        <div id="model-x">
-            <img id="tm-x" src="model-X.jpg">
+        <div class="model-x">
+            <img src="model-X.jpg">
             <h4> Model X</h4>
             <p> The <span> Model X </span> has an EPA size class as an SUV, and shares around 30 percent of its content
                 with the Model S, half of the originally planned 60 percent, and weighs about 10 percent more. Both the
                 Model X and Model S are produced at the <span>Tesla</span> Factory in Fremont, California. The prototype
-                was unveiled at Tesla's design studios in Hawthorne, California on February 9, 2012. First deliveries of
-                the Model X began in September 2015.</p>
+                was unveiled at Tesla's design studios in Hawthorne, California on February 9, 2012.</p>
         </div>
 
-        <div id="model-y">
-            <img id="tm-y" src="model-Y.jpg">
+        <div class="model-y">
+            <img src="model-Y.jpg">
             <h4>Model Y</h4>
             <p> The Tesla <span> Model Y</span> is a battery electric mid-size crossover SUV built by Tesla, Inc. since
                 2020. The Model Y is based on the Model 3 sedan platform.It shares an estimated 75 percent of its
