--- a/lesson10/index.html
+++ b/lesson10/index.html
@@ -19,7 +19,7 @@
                     <a href="#">TODO</a>
                 </li>
                 <li>
-                    <a href="#">BLOG<a>
+                    <a href="#">BLOG</a>
                 </li>
                 <li>
                     <a href="#">ABOUT</a>
@@ -32,36 +32,34 @@
     </header>
 
     <section>
-        <nav id="vertical-nav">
-            <div class="container">
-                <img id="graph" src="graph.webp">
-                <h1>To-Do List</h1>
-                <ul>
-                    <div class="add-task">
-                        <input type="text" id="taskInput" placeholder="Enter task...">
-                        <button onclick="addTask()">Add</button>
-                </ul>
-                <li>In Progress 3 </li>
-                <li> Completed 1 </li>
-            </div>
-            <div id="task-4">
-                <img id="check" src="check.svg">
-                <img id="bin" src="bin.webp">
-                Task 4
-            </div>
-            <div id="task-3">
-                <img id="bin" src="bin.webp">
-                Task 3
-            </div>
-            <div id="task-2">
-                <img id="bin" src="bin.webp">
-                Task 2
-            </div>
-            <div id="task-1">
-                <img id="bin" src="bin.webp">
-                Task 1
-            </div>
-        </nav>
+        <div id="vertical-nav">
+            <img id="graph" src="graph.webp">
+            <h1>To-Do List</h1>
+            <ul class="add-task">
+                <input type="text" id="taskInput" placeholder="Enter task...">
+                <button onclick="addTask()">Add</button>
+            </ul>
+            <li>In Progress 3</li>
+            <li>Completed 1</li>
+        </div>
+        <span class="badge">23/01/2024, 22:35pm</span>
+        <div id="task-4">
+            <img id="check" src="check.svg">
+            <img id="bin" src="bin.webp">
+            Task 4
+        </div>
+        <div id="task-3">
+            <img id="bin" src="bin.webp">
+            Task 3
+        </div>
+        <div id="task-2">
+            <img id="bin" src="bin.webp">
+            Task 2
+        </div>
+        <div id="task-1">
+            <img id="bin" src="bin.webp">
+            Task 1
+        </div>
     </section>
 </body>
 
