--- a/lesson05/about.html
+++ b/lesson05/about.html
@@ -14,13 +14,13 @@
     <nav>
         <ul>
             <li id="post">
-                <a href="/mainPage.html"> Posts</a>
+                <a href="mainPage.html"> Posts</a>
             </li>
             <li id="faq">
-                <a href="/FAQ.html" target="_blank">FAQ</a>
+                <a href="FAQ.html" target="_blank">FAQ</a>
             </li>
             <li id="about">
-                <a href="/about.html" target="_blank">About</a>
+                <a href="about.html" target="_blank">About</a>
             </li>
         </ul>
         <hr>
