--- a/lesson05/mainPage.html
+++ b/lesson05/mainPage.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li id="post">
-                <a href="#"> Posts</a>
+                <a href="mainPage.html"> Posts</a>
             </li>
             <li id="faq">
                 <a href="FAQ.html" target="_blank">FAQ</a>
