--- a/lesson17/index.html
+++ b/lesson17/index.html
@@ -3,16 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Check Day Status</title>
+  <title>My Page</title>
   <link rel="stylesheet" href="style.css">
   <style></style>
   
 </head>
 <body>
-  <h1>My favourite part of the day:</h1>
-  <input type="text" id="hoursInput"> </input>
-  <button onclick="dayStatus()"> Check Day Status </button>
- 
+
 <script src="script.js"> </script>
 </body>
 </html>
