--- a/lesson23/index.html
+++ b/lesson23/index.html
@@ -5,17 +5,15 @@
   <meta charset="utf-8">
   <title>My Page</title>
   <link rel="stylesheet" href="style.css">
-  <style></style>
-
 </head>
 
 <body>
   <input type="text" id="first_name" placeholder="First Name">
   <input type="text" id="last_name" placeholder="Last Name">
   <input type="text" id="address" placeholder="Address">
-  <button onclick="addCustomar()"> Add </button>
+  <button onclick="addNewUser()"> Add </button>
 
-  <button onclick="removeLastEvent()"> Remove </button>
+  <button onclick="deleteUser()"> Remove </button>
 
   <h2> Customar List </h2>
   <table id="table">
@@ -25,6 +23,7 @@
       <th> Address </th>
     </tr>
   </table>
+
   <script src="script.js"> </script>
 </body>
 
