--- a/CSSModulFinal/index.html
+++ b/CSSModulFinal/index.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CSS Module Final Task</title>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='main.js'></script>
 </head>
 
 <body>
