--- a/lesson05/FAQ.html
+++ b/lesson05/FAQ.html
@@ -14,13 +14,13 @@
     <nav>
         <ul>
             <li id="post">
-                <a href="#"> Posts</a>
+                <a href="mainPage.html"> Posts</a>
             </li>
             <li id="faq">
-                <a href="/FAQ.html" target="_blank">FAQ</a>
+                <a href="FAQ.html" target="_blank">FAQ</a>
             </li>
             <li id="about">
-                <a href="/about.html" target="_blank">About</a>
+                <a href="about.html" target="_blank">About</a>
             </li>
         </ul>
         <hr>
@@ -78,10 +78,56 @@
         <h3>FAQ</h3>
     </header>
 
-    
-
-
-
+    <div>
+        <h3 style="text-align: center ;">Post #1 Horse </h3>
+        <p id="f_horses" style="text-align: justify;">Horses exhibit a diverse array of coat colors and distinctive
+            markings, described by a specialized vocabulary. Often, a horse is classified first by its coat color,
+            before breed or sex. Horses of the same color may be distinguished from one another by white markings,
+            which, along with various spotting patterns, are inherited separately from coat color. Many genes that
+            create horse coat colors and patterns
+            have been identified. Current genetic tests can identify at least 13 different alleles influencing coat
+            color, and research continues to discover new genes linked to specific traits. The basic coat colors of
+            chestnut and black are determined by the gene
+            controlled by the Melanocortin 1 receptor, also known as the "extension gene" or "red factor", as its
+            recessive form is "red" (chestnut) and its dominant form is black. Additional genes control suppression
+            of black color to point coloration that results in a bay, spotting patterns such as pinto or leopard,
+            dilution genes such as palomino or dun, as well as greying, and all the other factors that create the many
+            possible coat colors found in horses.
+        </p>
+    </div>
+    <div>
+        <h3 style="text-align: center ;">Post #2 Dogs </h3>
+        <p id="f_dogs" style="text-align: justify;">The dog (Canis familiaris or Canis lupus familiaris) is a
+            domesticated descendant of the wolf. Also called the domestic dog, it is derived from extinct Pleistocene
+            wolves, and the modern wolf is the dog's nearest living relative. The dog was the first species to be
+            domesticated by
+            humans. Hunter-gatherers did this, over 15,000 years ago in Germany, which was before the development
+            of agriculture.Due to their long association with humans, dogs have expanded to a large number of
+            domestic individuals and gained the ability to thrive on a starch-rich diet that would be inadequate
+            for other canids. The dog has been selectively bred over millennia for various behaviors, sensory
+            capabilities, and physical attributes. Dog breeds vary widely in shape, size, and color. They perform many
+            roles for
+            humans, such as hunting, herding, pulling loads, protection, assisting police and the military,
+            companionship, therapy, and aiding disabled people. Over the millennia, dogs became uniquely adapted to
+            human behavior, and the human–canine bond has been a topic of frequent study. This influence on
+            human society has given them the sobriquet of "man's best friend".
+        </p>
+    </div>
+    <div>
+        <h3 style="text-align: center ;">Post #3 Cats </h3>
+        <p id="f_cats" style="text-align: justify;">The cat (Felis catus), commonly referred to as the domestic cat
+            or house cat, is the only domesticated species in the family Felidae. Recent advances in archaeology and
+            genetics have shown that the domestication of the cat occurred in the Near East around 7500 BC. It is
+            commonly kept as a house pet and farm cat, but also ranges freely as a feral cat avoiding human contact.
+            It is valued by humans for companionship and its ability to kill vermin. Because of its retractable claws
+            it is adapted to killing small prey like mice and rats. It has a strong flexible body, quick reflexes,
+            sharp teeth, and its night vision and sense of smell are well developed. It is a social species, but a
+            solitary hunter and a crepuscular predator. Cat communication includes vocalizations like meowing, purring,
+            trilling, hissing, growling, and grunting as well as cat body language. It can hear sounds too faint or too
+            high in frequency for human ears, such as those made by small mammals. It also secretes and perceives
+            pheromones.
+        </p>
+    </div>
 </body>
 
 </html>
