--- a/lesson22/index.html
+++ b/lesson22/index.html
@@ -5,11 +5,19 @@
   <meta charset="utf-8">
   <title>My Page</title>
   <link rel="stylesheet" href="style.css">
-  <style></style>
-  
 </head>
-<body>
 
-<script src="script.js"> </script>
+<body>
+  <h1>JavaScript Example</h1>
+  <p>Please entre a sentence: </p>
+
+  <input name="newSentence" id="sentence">
+  <button type="button" onclick="splitAndSort()"> Split </button>
+
+  <p id="sortedWords">Sorted words: </p>
+  <p id="wordCount"> There are words.</p>
+
+  <script src="script.js"> </script>
 </body>
+
 </html>
